Fix bad contrast

--- a/style.css
+++ b/style.css
@@ -690,9 +690,13 @@ p {
     font-family: "Open Sans";
 }
 
+.footer-text {
+    color: #000000 !important;
+}
+
 .cta-hero {
     margin-top: 22px;
-    color: #FFFFFF!important;
+    color: #000000 !important;
     text-transform: uppercase;
     padding: 12px 28px 12px 28px;
     font-size: 16px;
@@ -775,7 +779,7 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #FFFFFF !important;
 }
 
 .btn-atomic-tangerine {
